# lembas-core

./: .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mypy.ini  pixi.toml  pyproject.toml
.github/: release.yml  renovate.json
.github/workflows/: auto-label.yaml  build.yml  pre-commit.yaml  publish.yml  test.yml
conda.recipe/: meta.yaml  recipe.yaml
docs/: Makefile  make.bat  requirements.txt
docs/adr/: 0001-case-directory-convention.md
docs/source/: cli.md  concepts.md  conf.py  index.rst  plugins.md  user_guide.md
etc/: Makefile  build.conda-lock.yml  build.environment.yml
examples/planingfsi/: run_planingfsi.py
examples/planingfsi/filled_dam/: run.py  run_filled_dam_cases.py
examples/planingfsi/flat_plate/: run_flat_plate_cases.py
examples/planingfsi/flat_plate/flat_plate_base/: configDict.base  meshDict
examples/plugins/lembas-planingfsi/: pyproject.toml
examples/plugins/lembas-planingfsi/src/lembas_planingfsi/: __init__.py  filled_dam.py  flat_plate.py
scripts/: with_version.py
src/lead/: __init__.py  core.py
src/lembas/: __init__.py  __main__.py  _version.py  case.py  cli.py  core.py  index.py  logging.py  main.py  manifest.py  param.py  plugins.py  results.py  study.py  synthesis.py
tests/: test_case_directory.py  test_case_handler.py  test_cli.py  test_cli_commands.py  test_main.py  test_manifest.py  test_results.py  test_study.py  test_synthesis.py
