[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "setuptools-scm[toml]>=6.2"]

[project]
dependencies = []
description = "Lifecycle Engineering Model-Based Analysis System"
dynamic = ["version"]
license = {text = "MIT"}
name = "lembas"
requires-python = ">=3.9"

[project.optional-dependencies]
ci = ["lembas[dev]"]
dev = [
  "pytest<=7.4.0",
  "pytest-cov<=4.1.0",
  "mypy"
]
docs = [
  "myst-parser",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinx-autobuild",
  "sphinx-autodoc-typehints",
  "toml"
]
examples = [
  "planingfsi @ git+https://github.com/mattkram/planingfsi.git@main",
  "pandas <= 1.5"
]

[tool.isort]
force_single_line = true
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
files = [
  "src/**/*.py",
  "tests/**/*.py"
]
ignore_missing_imports = true
python_version = "3.9"

[tool.setuptools_scm]
write_to = "src/lembas/_version.py"
