[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "setuptools-scm[toml]>=6.2"]

[project]
dependencies = [
  "pluggy <=1.3.0",
  "typer <0.10",
  "rich <14"
]
description = "Lifecycle Engineering Model-Based Analysis System"
dynamic = ["version"]
license = {text = "MIT"}
name = "lembas"
requires-python = ">=3.9"

[project.optional-dependencies]
ci = ["lembas[dev]"]
dev = [
  "pytest<=7.4.2",
  "pytest-cov<=4.1.0",
  "mypy",
  "jinja2<3.1.3"
]
docs = [
  "myst-parser",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinx-autobuild",
  "sphinx-autodoc-typehints",
  "toml"
]
examples = [
  "planingfsi",
  "pandas <=2.1.1"
]

[project.scripts]
lembas = "lembas.cli:app"

[tool.coverage.report]
exclude_lines = [
  "pragma: no\\s*cover",
  # This covers both typing.TYPE_CHECKING and plain TYPE_CHECKING, with any amount of whitespace
  "if\\s+(typing\\.)?TYPE_CHECKING:",
  'if __name__ == "__main__":'
]

[tool.isort]
force_single_line = true
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
files = [
  "src/**/*.py",
  "tests/**/*.py"
]
ignore_missing_imports = true
python_version = "3.9"

[tool.setuptools_scm]
write_to = "src/lembas/_version.py"
