[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "setuptools-scm[toml]>=6.2"]

[project]
dependencies = [
  "pluggy <=1.6.0",
  "typer <0.22",
  "rich <15",
  "toml"
]
description = "Lifecycle Engineering Model-Based Analysis System"
dynamic = ["version"]
license = {text = "MIT"}
name = "lembas"
requires-python = ">=3.11"

[project.optional-dependencies]
ci = ["lembas[dev]"]
dev = [
  "pytest<=9.0.2",
  "pytest-cov<=7.1.0",
  "mypy",
  "jinja2<3.1.7",
  "types-toml"
]
docs = [
  "myst-parser",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinx-autobuild",
  "sphinx-autodoc-typehints",
  "toml"
]
examples = [
  "planingfsi",
  "pandas <=3.0.0"
]

[project.scripts]
lembas = "lembas.cli:app"

[tool.coverage.report]
exclude_lines = [
  "pragma: no\\s*cover",
  # This covers both typing.TYPE_CHECKING and plain TYPE_CHECKING, with any amount of whitespace
  "if\\s+(typing\\.)?TYPE_CHECKING:",
  'if __name__ == "__main__":'
]

[tool.mypy]
disallow_untyped_defs = true
files = [
  "src/**/*.py",
  "tests/**/*.py"
]
ignore_missing_imports = true
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = [
  "E501"  # line too long (handled by formatter)
]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "SIM"  # flake8-simplify
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.setuptools_scm]
write_to = "src/lembas/_version.py"
